<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/alertDialogFiltres"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/background_dialog">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titolFiltres"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:fontFamily="@font/airbnb_cereal_w_bd"/>

    <CheckBox
        android:id="@+id/cbTots"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/etiquetaTots"
        android:checked="true"
        android:buttonTint="@color/purple_button"/>

    <CheckBox
        android:id="@+id/cbUltimsUsats"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/etiquetaUltimsUsats"
        android:checked="true"
        android:buttonTint="@color/purple_button"/>

    <CheckBox
        android:id="@+id/cbMesUsats"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/etiquetaMesUsats"
        android:checked="true"
        android:buttonTint="@color/purple_button"/>

    <CheckBox
        android:id="@+id/cbFavorits"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/etiquetaFavorits"
        android:checked="true"
        android:buttonTint="@color/purple_button"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnFiltrar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center"
            android:text="@string/btnFiltrar"
            app:backgroundTint="@null"
            android:background="@drawable/background_button_purple"/>

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btnCancelar"
            app:backgroundTint="@null"
            android:background="@drawable/background_button_purple"/>

    </LinearLayout>

</LinearLayout>