<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="17dp"
    android:paddingBottom="17dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/background_dialog">

    <Button
        android:id="@+id/btnBaixa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:text="@string/etiquetaComBaixa"
        android:fontFamily="sans-serif-medium"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:textColor="@color/black"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>

    <Button
        android:id="@+id/btnMitjana"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:text="@string/etiquetaComMitjana"
        android:fontFamily="sans-serif-medium"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:textColor="@color/black"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>

    <Button
        android:id="@+id/btnAlta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:text="@string/etiquetaComAlta"
        android:fontFamily="sans-serif-medium"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:textColor="@color/black"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        android:background="@color/grey"/>

    <Button
        android:id="@+id/btnPersonalitzada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:text="@string/etiquetaPersonalitzada"
        android:fontFamily="sans-serif-medium"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:textColor="@color/black"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/btnCancelar"
            android:textAllCaps="false"
            app:backgroundTint="@null"
            android:background="@drawable/background_button_purple"/>

</LinearLayout>