<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/alertDialogFiltres"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/background_dialog">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titolIdiomes"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:fontFamily="@font/airbnb_cereal_w_bd"/>

    <RadioGroup
        android:id="@+id/rgIdioma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbCA"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="Català"
            android:checked="true"
            android:buttonTint="@color/purple_button"/>

        <RadioButton
            android:id="@+id/rbEN"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="English"
            android:checked="false"
            android:buttonTint="@color/purple_button"/>

        <RadioButton
            android:id="@+id/rbES"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="Castellano"
            android:checked="false"
            android:buttonTint="@color/purple_button"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnTraduccio"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center"
            android:text="@string/bntTraduir"
            app:backgroundTint="@null"
            android:background="@drawable/background_button_purple"/>

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btnCancelar"
            app:backgroundTint="@null"
            android:background="@drawable/background_button_purple"/>

    </LinearLayout>

</LinearLayout>