<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="17dp"
    android:paddingBottom="17dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/background_dialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtNomRol"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Nom rol"
            android:fontFamily="sans-serif-black"
            android:textSize="23dp"
            android:textColor="@color/black"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/etNomRol"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:paddingStart="12dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/hintRol"
            android:background="@drawable/background_text_notes"
            android:visibility="visible"/>

        <ImageButton
            android:id="@+id/imgBtnEditar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/editar"
            android:backgroundTint="@color/transparent"
            android:visibility="gone"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSucursal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical"
        android:background="@drawable/background_dialog"
        android:elevation="5dp"
        android:visibility="visible">

        <include
            android:id="@+id/includeSucursal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/layout_sucursal_info"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/txtSucursals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/titolSucursals"
            android:fontFamily="sans-serif-medium"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:visibility="visible"/>

        <Spinner
            android:id="@+id/spSucursals"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="5dp"
            android:background="@drawable/background_layout_gestions"
            android:visibility="visible"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnGuardarEliminarRol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/btnGuardar"
        android:fontFamily="sans-serif-medium"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        android:background="@drawable/background_button_purple"/>

    <Button
        android:id="@+id/btnBackCancelar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/btnCancelar"
        android:fontFamily="sans-serif-medium"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        android:background="@drawable/background_button_normal"/>

</LinearLayout>